[package]
name = "oxideav-io"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-io"
homepage = "https://github.com/OxideAV/oxideav-io"
authors = ["Mark Karpeles"]
description = "Generic open/save/transcode entry point for oxideav — auto-detect a media source and read, write, or transcode it through the oxideav-core registries"
readme = "README.md"
keywords = ["multimedia", "decode", "open", "image", "video"]
categories = ["multimedia", "multimedia::encoding"]

[features]
# Default is the registry facade: the caller supplies a populated
# `oxideav_core::RuntimeContext` and uses the `*_with(ctx, …)` functions.
#
# A meta-backed zero-config `open(path)` is intentionally NOT a feature
# here: `oxideav-meta`'s full codec fleet only resolves inside the
# workspace (via `[patch.crates-io]`), so depending on it — under ANY
# feature — would make this crate fail the standard `--all-features`
# crate CI and block it from crates.io. The zero-config convenience is
# provided by the umbrella instead, where the fleet resolves.
default = ["registry"]

# Base (and currently only) layer: typed registry orchestration over
# `oxideav-core`, with `oxideav-pixfmt` for the RGB/RGBA frame collapse.
registry = ["dep:oxideav-core", "dep:oxideav-pixfmt"]

[dependencies]
# Registry framework — the source of every Decoder / Demuxer /
# RuntimeContext we orchestrate.
oxideav-core = { version = "0.1", optional = true }
# Pixel-format conversion used by `open_rgb` / `open_rgba` to collapse a
# decoded `VideoFrame` to packed RGB24 / RGBA8888.
oxideav-pixfmt = { version = "0.1", optional = true }
